fix spaces on mobile

--- a/src/styles/components/city.scss
+++ b/src/styles/components/city.scss
@@ -1,7 +1,7 @@
 @import '~@/styles/shared/globals.scss';
 
 .city {
-  margin-bottom: 32px;
+  margin-bottom: 46;
 
   @include from('xl') {
     margin-bottom: 0;
