--- a/src/styles/components/pagination.scss
+++ b/src/styles/components/pagination.scss
@@ -6,7 +6,10 @@
   margin: 0 auto;
   display: block;
   width: 100%;
-  margin-bottom: 66px;
+
+  @include from('xl') {
+    margin-bottom: 66px;
+  }
 
   &__list {
     display: flex;
