--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -109,9 +109,12 @@ ul {
 
 .main {
   margin-top: $--header-height;
+  padding-bottom: 46px;
 
   @include from('xl') {
     margin-top: $--header-height-xl;
+    padding-bottom: 0;
+
     // screen height - header - footer
     min-height: calc(100vh - 100px - 212px);
   }
